--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ authors = ["Mattish <mattishd@gmail.com>"]
 glium = "*"
 time = "*"
 image = "*"
+obj-rs = "0.4"
 
 [dependencies.vecmath]
 git = "https://github.com/PistonDevelopers/vecmath"
