--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ authors = ["Mattish <mattishd@gmail.com>"]
 glium = "*"
 time = "*"
 image = "*"
+rand = "*"
 obj-rs = "0.4"
 
 [dependencies.vecmath]
